Revision history for Dist-Zilla-PluginBundle-DAGOLDEN

{{$NEXT}}

0.017     2011-02-06 21:57:53 EST5EDT

    - added Dist::Zilla::Plugin::CheckPrereqsIndexed

0.016     2011-01-31 22:14:12 EST5EDT

    - added Pod::Weaver::Section::Support and Bugtracker to the mix

0.015     2011-01-23 17:11:20 EST5EDT

    - updated prereqs, including missing Pod::Elemental::Transformer::List

0.014     2011-01-06 16:59:44 EST5EDT

    - bump Repository prereq to 0.17

0.013     2010-11-02 21:52:50 EST5EDT

    - bump MetaProvides::Package prereq and tell it to honor MetaNoIndex
    - add package 'DB' to MetaNoIndex

0.012     2010-10-29 16:42:37 EST5EDT

    - annotate example dist.ini in documents (suggeston from Tim Bunce)

0.011     2010-10-10 22:47:05 EST5EDT

    - replace BumpNextVersionFromGit with Git::NextVersion

0.010     2010-10-07 13:42:21 EST5EDT

    - adds GithubMeta to override Repository if repo is on github

    - replaces AutoPrereq (deprecated) with AutoPrereqs

0.009     2010-08-17 08:04:05 EST5EDT

    - set a minimum TaskWeaver prereq to work with Dist::Zilla 2.X

0.008     2010-08-11 17:50:46 EST5EDT

    - add Pod::Weaver::PluginBundle::DAGOLDEN (which is @RJBS plus wikidoc)

0.007     2010-05-26 12:49:30 America/New_York

    - bump Dist::Zilla prereq to 3.101450

    - bump Dist::Zilla::Plugin::Repository prereq to 0.13 for CPAN Meta
      spec version 2 compatibility

    - add MetaJSON plugin

0.006     2010-05-14 10:36:01 EST5EDT

    - fixes git commit/tag ordering; now commits dirty files
      after release, then tags, then updates Changes for next
      version and does a final commit before pushing

    - Pod spelling tests disabled pending fixes to stopwords and
      Pod::Weaver

0.005     2010-05-14 10:07:40 EST5EDT

    - fifth draft

0.004     2010-05-14 09:33:45 EST5EDT

    - fourth draft

0.003     2010-05-14 09:30:05 EST5EDT

    - third draft

0.002     2010-05-14 07:00:04 EST5EDT

    - second draft
