@@ -4,4 +4,3 @@ license           = Apache_2_0
 copyright_holder  = David Golden
 
 [@DAGOLDEN]
-git_remote = github
