@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 package Dist::Zilla::PluginBundle::DAGOLDEN;
-# ABSTRACT: Dist::Zilla configuration the way DAGOLDEN does it
+# VERSION
 
 # Dependencies
 use autodie 2.00;
@@ -28,7 +28,8 @@ use Dist::Zilla::Plugin::PodSpellingTests ();
 use Dist::Zilla::Plugin::PodWeaver ();
 use Dist::Zilla::Plugin::TaskWeaver 0.101620 ();
 use Dist::Zilla::Plugin::PortabilityTests ();
-use Dist::Zilla::Plugin::Prepender ();
+use Dist::Zilla::Plugin::OurPkgVersion 0.001008 ();
+use Dist::Zilla::Plugin::InsertCopyright 0.001 ();
 use Dist::Zilla::Plugin::ReadmeFromPod ();
 use Dist::Zilla::Plugin::Repository 0.17 ();  # safe for missing github
 
@@ -109,8 +110,8 @@ sub configure {
     'ManifestSkip',       # core
 
   # file munging
-    'PkgVersion',         # core
-    'Prepender',
+    'OurPkgVersion',
+    'InsertCopyright',
     ( $self->is_task
       ?  'TaskWeaver'
       : [ 'PodWeaver' => { config_plugin => $self->weaver_config } ]
@@ -133,8 +134,6 @@ sub configure {
   # metadata
     'MinimumPerl',
     ( $self->auto_prereq ? 'AutoPrereqs' : () ),
-    [ Repository => { git_remote => $self->git_remote, github_http => 0 } ],
-    # overrides Repository if github based
     [ GithubMeta => { remote => $self->git_remote } ],
     [ MetaNoIndex => { 
         directory => [qw/t xt examples corpus/],
@@ -187,6 +186,9 @@ __PACKAGE__->meta->make_immutable;
 
 1;
 
+# ABSTRACT: Dist::Zilla configuration the way DAGOLDEN does it
+# COPYRIGHT
+
 __END__
 
 
@@ -218,8 +220,8 @@ following dist.ini:
   [ManifestSkip]      ; if -f MANIFEST.SKIP, skip those, too
 
   ; file modifications
-  [PkgVersion]        ; add $VERSION = ... to all files
-  [Prepender]         ; prepend a copyright statement to all files
+  [OurPkgVersion]     ; add $VERSION = ... to all files
+  [InsertCopyright    ; add copyright at "# COPYRIGHT"
   [PodWeaver]         ; generate Pod
   config_plugin = @DAGOLDEN ; my own plugin allows Pod::WikiDoc
 
@@ -240,14 +242,7 @@ following dist.ini:
   ; metadata
   [AutoPrereqs]       ; find prereqs from code
   [MinimumPerl]       ; determine minimum perl version
-
-  [Repository]        ; set 'repository' in META
-  git_remote = origin ;   - remote to choose
-  github_http = 0     ;   - for github, use git:// not http://
-
-  ; overrides [Repository] if repository is on github
   [GithubMeta]
-  remote = origin     ; better than [Repository]; sets homepage, too
 
   [MetaNoIndex]       ; sets 'no_index' in META
   directory = t
@@ -316,9 +311,6 @@ robust than just the version number when parsing versions for
 {Git::NextVersion}
 * {version_regexp} -- given to {Git::NextVersion}.  Default
 is '^release-(.+)$'
-* {git_remote} -- given to {Repository}.  Defaults to 'origin'.  If set to
-something other than 'origin', it is also added as a {push_to} argument for
-{Git::Push}
 * {fake_release} -- swaps FakeRelease for UploadToCPAN. Mostly useful for
 testing a dist.ini without risking a real release.
 * {weaver_config} -- specifies a Pod::Weaver bundle.  Defaults to @DAGOLDEN.
